force-app/main/default/objects/AccountContactRelation/fields/EDUtb_Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Active_Formula__c</fullName>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>StartDate &lt;= TODAY() &amp;&amp; (ISBLANK(EndDate) || TODAY() &lt;= EndDate)
||
(ISBLANK(EndDate) &amp;&amp; ISBLANK(StartDate))
||
(TODAY() &lt;= EndDate &amp;&amp; ISBLANK(StartDate))</formula>
    <inlineHelpText>Calculated using the Start Date and End Date</inlineHelpText>
    <label>Active Formula</label>
    <type>Checkbox</type>
</CustomField>