force-app/main/default/objects/AccountContactRelation/fields/EDUtb_Allowed_to_Create_or_Update__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Allowed_to_Create_or_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <inlineHelpText>Used to prevent most pathways from creating or updating an ACR obj (prevention via a validation rule). Flow automation sets to true in order to bypass</inlineHelpText>
    <label>Allowed to Create or Update</label>
    <type>Checkbox</type>
</CustomField>